
- autoconf: fixes for non-default BUILDDIR
- msvs2005prj: fixed _WIN32_WCE define for PocketPC 2003 platform (#187)
- put user- or configure-provided LDFLAGS and LIBS to the end of linker
  command line to avoid conflicts of local libraries with system-wide (#182)
- xcode2: fixed <ldflags> to not delete previously specified flags (#192)
- xcode2: fixed <cxxflags> and <cppflags> for C++ files (Scott Bailey, #194)
- xcode2: fixed <library> handling (Scott Bailey, #199)
- added <depends-on-file> to all formats, with warnings if it's not
  implemented (#190)
- mingw, gnu: avoid "No rule to make target ..." errors in generated makefiles
  when dependency header is removed (#201)
- msvs2003prj, msvs2005prj: don't use /RTC1 flag in release builds with debug
  information enabled (#202)
- msvs2003prj, msvs2005prj: enable functions inlining iff optimization is
  enabled instead of doing it unconditionally (#205)
- xcode2: added support for <headers> (Scott Bailey, #208)
- msvs2003prj, msvs2005prj: improvements to make generated projects more
  similar to natively created projects (#210)
- fixes for running on Solaris (#214)
- xcode2: fixed naming of <dll> targets (Scott Bailey, #218)
- check for incorrect used of conditional <set> (#220)
- added support for multiple source files with the same name (#92)
- msvs2003prj, msvs2005prj: fixed to generate correct precompiled headers
  setting for auto vs. manual PCH creation


Version 0.2.3
--------------

- removed support for C++ Builder X, it no longer exists and the format
  wasn't used by anyone in practice
- significantly improved Xcode format (Kevin Ollivier)
- fixed running bakefile_gen if the name of temporary directory contains spaces
- msvc6prj: use /pdb linker option to make the projects work when imported
  in MSVC7.1 (Scott Bailey, patch #1732354)
- msvs2005prj: added support for Pocket PC platform
- added support for MSVS2003 project files (based on patch by
  Aleksander Jaromin)